# wiremap

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  ROADMAP-v2.md  docker-compose.yaml  pyproject.toml
.github/workflows/: tests.yml  wiremap.yml
action/: README.md  action.yml
bench/: PRECISION.md  RESULTS.md  run_bench.py
bench/samples/: fastapi-template.md  redash.md  superset.md
demo/: coverage.json  replay_spans.py
demo/.wiremap/: cache.json  graph.json  wiremap.html
demo/backend/app/: main.py  models.py  schemas.py  services.py
demo/frontend/src/: Dashboard.jsx  OrderForm.jsx  UserProfile.jsx
tests/: conftest.py  golden_graph.json  regen_golden.py  test_adapters.py  test_backend_extractor.py  test_cache.py  test_contract.py  test_coverage.py  test_diff.py  test_express_adapter.py  test_frontend_extractor.py  test_golden.py  test_graphql_adapter.py  test_hardening.py  test_history.py  test_matcher.py  test_nextjs_adapter.py  test_path_invariance.py  test_qualified_calls.py  test_request_contract.py  test_risk.py  test_runtime.py  test_scoped_auth.py  test_server.py  test_sql_taint.py  test_ts_types.py  test_viewer.py
tests/fixtures/backend_app/app/: auth.py  bp.py  calc.py  contract.py  deps.py  legacy.py  main.py  models.py  pricing.py  routers.py  schemas.py  scoped_auth.py  services.py  tax.py
tests/fixtures/django_app/app/: services.py  urls.py  views.py  viewsets.py
tests/fixtures/django_app/project/: urls.py
tests/fixtures/express_app/: notexpress.js  server.js
tests/fixtures/express_app/routes/: users.js
tests/fixtures/frontend_app/src/: Body.jsx  Contract.jsx  Query.jsx  Safe.jsx  Typed.tsx  Widgets.jsx
tests/fixtures/graphql_app/backend/: schema.graphql
tests/fixtures/graphql_app/backend/app/: legacy_schema.py  resolvers.py  services.py
tests/fixtures/graphql_app/frontend/src/: Gql.jsx
tests/fixtures/nextjs_app/app/api/orders/: route.ts
tests/fixtures/nextjs_app/pages/api/: health.ts
tests/fixtures/nextjs_app/server/: trpc.ts
tests/fixtures/nextjs_app/src/: Profile.tsx
tests/fixtures/openapi_app/: openapi.json
tests/fixtures/openapi_app/frontend/src/: Pets.jsx
wiremap/: cache.py  cli.py  collector.py  coverage.py  gql.py  graph.py  matcher.py  risk.py  server.py  viewer_template.html
wiremap/extractors/: express_backend.py  python_backend.py  react_frontend.py
(+1 files in other folders)
