[project]
name = "wiremap"
version = "0.2.0"
description = "Full-stack wire mapping: trace every frontend→backend wire, flag the risky ones with static + runtime evidence"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Sha45trip" }]
keywords = ["static-analysis", "fastapi", "django", "flask", "react",
            "graphql", "opentelemetry", "api", "code-analysis", "devtools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "tree-sitter>=0.21",
  "tree-sitter-javascript>=0.21",
  "tree-sitter-typescript>=0.21",
  "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/Sha45trip/wiremap"
Repository = "https://github.com/Sha45trip/wiremap"
Issues = "https://github.com/Sha45trip/wiremap/issues"

[project.optional-dependencies]
otlp = ["opentelemetry-proto>=1.20"]
dev = ["pytest>=8", "opentelemetry-proto>=1.20"]

[project.scripts]
wiremap = "wiremap.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["wiremap", "wiremap.extractors"]

[tool.setuptools.package-data]
wiremap = ["viewer_template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
